--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,19 @@
   <title>Layout 3 Colunas</title>
   <link rel="stylesheet" href="Style.css" />
 </head>
+
 <body>
+  
+  <nav class="navbar">
+    <ul class="nav-list">
+      <li><a href="Experiences.html">Experiencias</a></li>
+      <li><a href="Index.html">Inicio</a></li>
+      <li><a href="Certifications.html">Certificados</a></li>
+    </ul>
+  </nav>
+
   <div class="container1">
+
     <div class="coluna">
       <h1>João Dias</h1>
       <p>
@@ -19,11 +30,12 @@
     </div>
 
     <div class="coluna">
-      <img src="assets/Perfil.jpg" alt="Foto de Perfil" class="imagem-circular" />
+      <img src="assets/Perfil.jpg" alt="Foto de Perfil" class="imagem-circular"/>
     </div>
 
     <div class="coluna">
       <h3>linguagens</h3>
+
       <div class="tools">
         <img src="assets/Html.png" />
         <img src="assets/Css.png" />
@@ -34,6 +46,7 @@
       </div>
 
       <h3>Ferramentas</h3>
+
       <div class="tools">
         <img src="assets/Arduino.png" />
         <img src="assets/Figma.png" />
@@ -55,37 +68,7 @@
     </a>
   </div>
 
-  <div class="container2">
-    <a href="https://github.com/AnzinFelipe/FootLink" class="imagem-esquerda">
-      <img src="assets/FootLink.jpg" alt="imagem footlink" class="fade-scale-img" />
-    </a>
-    <div class="description1">
-      <h1>FootLink</h1>
-      <p>
-        O FootLink é um dispositivo de controle adaptável desenvolvido com o propósito de atender às necessidades de pessoas com deficiência motora nos membros superiores.
-        Sua principal função é permitir a interação com sistemas computacionais ou eletrônicos por meio dos pés, promovendo maior autonomia, acessibilidade e inclusão digital para usuários com mobilidade reduzida nos braços e mãos.
-      </p>
-      <a href="https://github.com/AnzinFelipe/FootLink" class="imglink">
-        <img src="assets/GitHubFootLink.png" alt="Buttom_link_FootLink" />
-      </a>
-    </div>
-  </div>
-
-  <div class="container3">
-    <div class="description2">
-      <h1>Wod Tracker</h1>
-      <p>
-        O Wod Tracker é uma aplicacao em python que armazena wods de crosfit, define metas e alem disso sugere treinos personalizados baseados nos treinos ja existentes
-      </p>
-      <a href="https://github.com/JotaDiasss/Wod_Tracker" class="imglink">
-        <img src="assets/GitHubWodTracker.png" alt="Buttom_Link_Wodtracker" />
-      </a>
-    </div>
-    <a href="https://github.com/JotaDiasss/Wod_Tracker" class="imagem-direita">
-      <img src="assets/Wod_Tracker.jpg" alt="Wod_Tracker" class="fade-scale-img" />
-    </a>
-  </div>
-
   <script src="Script.js"></script>
+
 </body>
 </html>
